# fanfiction-bookmaker

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: build-books.yml
examples/: build-books.yml  fanfic.yml  writing-repo-workflow-commit.yml  writing-repo-workflow.yml
outputs/story-repo/: README.md  chapters.yml  fanfic.yml
outputs/story-repo/chapters/: example-chapter.yml
src/fanfic_bookmaker/: __init__.py  cli.py  compiler.py  spellcheck.py
